            Tambien se cambiaron las extensiones en Makefile a .cpp
          - Se tradujo todo a español
            Agregado empleados.h y empleados.cpp con las funciones que manipulan personas
            De empresa.cpp y empresa.h se eliminaron esas mismas funciones
            Se definieron tres estructuras sencillas: Empresa, Cargo, Persona
            Agregado: CrearOrg esta implementado

6/10/204  - Agregado: AsignarPersona()
            Funciones de ayuda: CopiarString(), ifPersonaExisteCargo(), ListarPersonaSimple()
            Nombre a cargo

10/10/2024  -Agregado: empleados.cpp, empleados.h, cargo.cpp, cargo.h
              Se desplazaron funciones para coincidir con estos nuevos modulos
            -Agregado: Ahora nodo_cargo tiene los parametros para construir un arbol
            -Agregado: el nodo_persona, con cedula y nombre, reemplazo al nodo empleado. El nodo_empleado contiene el nodo_persona
            -Eliminado: se eliminaro funciones que no se iban a poder usar sin mayores cambios con las nuevas struct

10/13/2024  -El arbol de cargos ahora es funcional.
            Se pueden añadir cargos en cualquier orden con cualquier nombre.
            -Agregado: se crearon diversas funciones para buscar informacion en el arbol de cargos
            -Agregado: es posible asignar empleados a un determinado cargo.
              Se pueden añadir empleados con los mismos datos. Hay que añadir funciones para evitarlo desde empleados.cpp
            -Agregado: se pueden usar ListarJerarquia() para obtener una imagen visual del arbol

10/19/2020  -Merge de del codigo de todos los miembros del grupo
            -Reordenamiento general de todas las funciones. Se agruparon aquellas que tienen parecido funcional
            -Aregado: funciones relativas a la manipulacion de la lista de empleado y personas
            -Agregado: todas las funciones de listar de alguna manera estan funcionando