@@ -36,7 +36,38 @@ TipoRet EliminarCargo(Empresa &e, Cadena cargo){
 // En otro caso la operación quedará sin efecto.
 // Si el cargo a eliminar posee subcargos, éstos deberán ser eliminados también, así como
 // las personas asociadas a cada uno de los cargos suprimidos.
-	return NO_IMPLEMENTADA;
+	
+	Cargo cargo_a_eliminar, cargo_padre, cargo_hermano_ant, cargo_hermano_sig; // Declaro variables
+
+	cargo_a_eliminar = getEmpresaRaiz(e); // Tomo el cargo raiz de la empresa
+
+	if(!ifCargoExiste) // Compruebo que el cargo existe
+		return ERROR;
+	if(cargo_a_eliminar->padre == NULL) // Compruebo que no sea el primer cargo
+		return ERROR;
+
+	cargo_a_eliminar = iteradorEmpresa(cargo, cargo_a_eliminar); // Busco el cargo que quiero eliminar. Esta enlazado a todo su subarbol
+
+	// Empiezo a modificar los nodos para no quedarme con punteros a direcciones liberadas
+	if (cargo_a_eliminar->hermano_ant == NULL) { // Si el nodo no tiene un hermano anterior
+		cargo_padre = cargo_a_eliminar->padre; // Me guardo el padre
+		cargo_padre->hijo = NULL; // El padre pasa a no tener hijos.
+	}
+	else { // Si el cargo tiene un hermano anterior
+		if(cargo_a_eliminar->hermano_sig == NULL) { // Si el cargo a eliminar no tiene un hermano sig
+			cargo_hermano_ant = NULL; // Apunto a NULL el hermano ANTERIOR del cargo a eliminar
+		}
+		else { // Si el cargo tiene un hermano anterior y un hermano siguiente
+			cargo_hermano_ant->hermano_sig = cargo_hermano_sig; // Me salto el del medio, que es el que quiero eliminar
+		}
+	}
+	
+	//Entro en una funcion recursiva que elimina todo los cargos que le pase
+	eliminarCargosDesde(cargo_a_eliminar);
+
+
+	
+	return OK;
 }
 
 TipoRet ListarJerarquia(Empresa e){
@@ -54,9 +85,21 @@ TipoRet ListarJerarquia(Empresa e){
 
 TipoRet ListarCargosAlf(Empresa e){
 // Listar todos los cargos ordenados alfabéticamente.
-// Lista todos los cargos de la empresa ordenados alfabéticamente por nombre del cargo. 
+// Lista todos los cargos de la empresa ordenados alfabéticamente por nombre del cargo.
 
-	int count = 96;
+	// Creo una lista que es la que voy a ordenar
+	listaSimple lista = definirListaSimple();
+	
+	// A partir de ahora itero en todos los cargos y voy añadiendo nodos
+	Cargo cargos = getEmpresaRaiz(e);
+	ArbolCargo_A_ListaCargo(cargos, lista);
+
+
+	// Empiezo la funcion de ordenar;
+	lista = ordenarListaAlf(lista);
+
+	// Imprimo la litra en orden alfabetico
+	imprimeListaSimple(lista);
 
 	return OK;
 }
@@ -158,8 +201,8 @@ void imprimirArbolCargosHasta(Cargo cargos, Cadena car_nom, int ident) {
 			imprimirArbolCargosHasta(cargos->hijo, car_nom, ident + 2);
 		}
 
-		if(cargos->hermano != NULL) {
-			imprimirArbolCargosHasta(cargos->hermano, car_nom, ident + 2);
+		if(cargos->hermano_sig != NULL) {
+			imprimirArbolCargosHasta(cargos->hermano_sig, car_nom, ident + 2);
 		}
 	}
 }
@@ -175,8 +218,8 @@ void imprimirArbolCargos(Cargo cargos, int ident) {
 		if(cargos->hijo != NULL) {
 			imprimirArbolCargos(cargos->hijo, ident + 2);
 		}
-		if(cargos->hermano != NULL) {
-			imprimirArbolCargos(cargos->hermano, ident);
+		if(cargos->hermano_sig != NULL) {
+			imprimirArbolCargos(cargos->hermano_sig, ident);
 		}
 	}
 }
@@ -230,30 +273,30 @@ Cargo iteradorEmpresa(Cadena cargo, Cargo cargos) {
 
 	if(strcmp(cargos->nombre, cargo) == 0) { // Encontre un cargo con el mismo nombre
 		return cargos;
-	} else if(cargos->hermano == NULL && cargos->hijo == NULL) {  // Si llegue al final de ambos
+	} else if(cargos->hermano_sig == NULL && cargos->hijo == NULL) {  // Si llegue al final de ambos
 		return NULL;
-	} else if(cargos->hermano == NULL && cargos->hijo != NULL) { // Si llegue al final de hermano voy al hijo
+	} else if(cargos->hermano_sig == NULL && cargos->hijo != NULL) { // Si llegue al final de hermano_sig voy al hijo
 		return iteradorEmpresa(cargo, cargos->hijo);
-	} else if(cargos->hermano != NULL && cargos->hijo == NULL) { // Si llegue al final de hijo voy al hermano
-		return iteradorEmpresa(cargo, cargos->hermano);
-	} else if(cargos->hermano != NULL && cargos->hijo != NULL) { // Si hay ramas para los dos lados voy a hijo primero (exploro toda esa rama)
+	} else if(cargos->hermano_sig != NULL && cargos->hijo == NULL) { // Si llegue al final de hijo voy al hermano_sig
+		return iteradorEmpresa(cargo, cargos->hermano_sig);
+	} else if(cargos->hermano_sig != NULL && cargos->hijo != NULL) { // Si hay ramas para los dos lados voy a hijo primero (exploro toda esa rama)
 		Cargo result = iteradorEmpresa(cargo, cargos->hijo);
         if (result != NULL) {
             return result;
         } else {
-            return iteradorEmpresa(cargo, cargos->hermano);
+            return iteradorEmpresa(cargo, cargos->hermano_sig);
         }
 	}
 }
 
-Cargo iteradorCargoHermanos(Cargo cargos) {
+Cargo iteradorCargohermano_sigs(Cargo cargos) {
 	// Itera hasta el final de la lista de cargos hijos y devuelve el ultimo miembro
 
-	if(cargos->hermano == NULL) {
+	if(cargos->hermano_sig == NULL) {
 		return cargos;
 	}
-	else if(cargos->hermano != NULL) {
-		return (iteradorCargoHermanos(cargos->hermano));
+	else if(cargos->hermano_sig != NULL) {
+		return (iteradorCargohermano_sigs(cargos->hermano_sig));
 	}
 }
 
@@ -262,32 +305,33 @@ Cargo BuscaCargoPersona(Cargo cargos, Cadena ci) {
 
 	if(EsEmpleado(cargos->empleados,ci)) { // Encontre un cargo con la persona como empleado
 		return cargos;
-	} else if(cargos->hermano == NULL && cargos->hijo == NULL) {  // Si llegue al final de ambos
+	} else if(cargos->hermano_sig == NULL && cargos->hijo == NULL) {  // Si llegue al final de ambos
 		return NULL;
-	} else if(cargos->hermano == NULL && cargos->hijo != NULL) { // Si llegue al final de hermano voy al hijo
+	} else if(cargos->hermano_sig == NULL && cargos->hijo != NULL) { // Si llegue al final de hermano_sig voy al hijo
 		return BuscaCargoPersona(cargos->hijo, ci);
-	} else if(cargos->hermano != NULL && cargos->hijo == NULL) { // Si llegue al final de hijo voy al hermano
-		return BuscaCargoPersona(cargos->hermano, ci);
-	} else if(cargos->hermano != NULL && cargos->hijo != NULL) { // Si hay ramas para los dos lados voy a hijo primero (exploro toda esa rama)
+	} else if(cargos->hermano_sig != NULL && cargos->hijo == NULL) { // Si llegue al final de hijo voy al hermano_sig
+		return BuscaCargoPersona(cargos->hermano_sig, ci);
+	} else if(cargos->hermano_sig != NULL && cargos->hijo != NULL) { // Si hay ramas para los dos lados voy a hijo primero (exploro toda esa rama)
 		Cargo result = BuscaCargoPersona(cargos->hijo, ci);
         if (result != NULL) {
             return result;
         } else {
-            return BuscaCargoPersona(cargos->hermano, ci);
+            return BuscaCargoPersona(cargos->hermano_sig, ci);
         }
 	}
 }
 
 
 
-//_______Funcciones tipo asignar y definir
+//_______Funcciones tipo asignar, definir y eliminar
 
 Cargo definirCargo(Cadena cargo_nom) {
 	
 	Cargo nuevo_cargo = new(nodo_cargo);
 	nuevo_cargo->empleados = CreaListaEmpleado();
 	nuevo_cargo->hijo = NULL;
-	nuevo_cargo->hermano = NULL;
+	nuevo_cargo->hermano_sig = NULL;
+	nuevo_cargo->hermano_ant = NULL;
 	nuevo_cargo->padre = NULL;
 
 	Cadena nombre = new char[MAX_COMANDO];
@@ -300,17 +344,91 @@ Cargo definirCargo(Cadena cargo_nom) {
 void AsignarCargoHijo(Cargo cargo_hijo, Cargo cargo_padre) {
 // Asigno el nuevo cargo como hijo del cargo pedido
 
-	// Voy al final de la lista de cargos hermanos
+	// Si el cargo padre esta vacio pongo el cargo nuevo
 	if(cargo_padre->hijo == NULL) {
 		cargo_padre->hijo=cargo_hijo;
-		
 		cargo_hijo->padre = cargo_padre;
+	// Si el cargo padre ya tiene hijos itero hasta el final de esa lista
 	} else {
-		Cargo cargo_hermano = iteradorCargoHermanos(cargo_padre->hijo);
-		cargo_hermano->hermano = cargo_hijo;
-		
-		cargo_hijo->padre = cargo_padre;
+		Cargo cargo_hermano_sig = iteradorCargohermano_sigs(cargo_padre->hijo); // Busco el ultimo cargo de la lista de hijos
+		cargo_hermano_sig->hermano_sig = cargo_hijo; // Asigno el cargo que debo poner a lo ultimo de la lista
+		cargo_hijo->hermano_ant = cargo_hermano_sig; // Al nuevo cargo que puse le asigno el hermano anterior
+
+		cargo_hijo->padre = cargo_padre; // Señalo quien es el padre de este cargo
 	}
+}
+
+void ArbolCargo_A_ListaCargo(Cargo cargos, listaSimple &lista) {
+	if(cargos==NULL) {
+		return;	
+	}
+	else {
+		
+		// Creo un nodo de tipo lista con los datos del nodo de cargos
+		listaSimple nuevaLista = new(nodo_listaSimple);
+		Cadena nombre = getCarNom(cargos);
+		setNom(nuevaLista, nombre);
+		nuevaLista->sig=NULL;
+
+		// Si estoy en una lista que no se inicializo
+		if(lista == NULL) {
+			lista = nuevaLista;
+		}
+		else {
+			nuevaLista->sig = lista;
+			lista = nuevaLista;
+		}
+
+
+		// Entro al hijo primero sino es null
+		if (cargos->hijo != NULL)
+			ArbolCargo_A_ListaCargo(cargos->hijo, lista);
+		
+		if(cargos->hermano_sig != NULL) {
+			ArbolCargo_A_ListaCargo(cargos->hermano_sig, lista);
+		}
+	}
+
+	
+}
+
+Cargo eliminarCargosDesde(Cargo cargos){
+// Dado un cargo, eliminarlo a este y todo lo que tiene por debajo (NO ELIMINO LOS HERMANOS EN ESTA FUNCION. USAR CON SEGURIDAD)
+	
+	eliminarCargos_Y_Parientes(cargos->hijo); // La funcion que paso elimina todo si o si
+
+	// Elimino el nodo con tranquilidad
+	EliminarEmpleadosLista(cargos->empleados); // Empiezo eliminando la lista de empleados
+	delete[] cargos->nombre; // Elimino la string
+	delete cargos; // Elimino el nodo 
+	return NULL; 
+}
+
+Cargo eliminarCargos_Y_Parientes(Cargo cargos) {
+// Dado un cargo raiz pasado, eliminar ese cargo y todo lo que este unido. (ELIMINA HERMANOS TAMBIEN)
+
+	// Si estoy en un cargo null devuelvo null
+	if (cargos == NULL) {
+		return NULL;
+	}
+
+	// Entro en los cargos hijo si no estoy al final
+	if(cargos->hijo != NULL) {
+		eliminarCargosDesde(cargos->hijo);
+		cargos->hijo = NULL;
+	}
+
+	// Entro en los cargos padre si no estoy al final
+	if(cargos->hermano_sig != NULL) {
+		eliminarCargosDesde(cargos->hermano_sig);
+	}
+
+	// En este punto ya me meti en todo lo posible asi que puedo eliminar nodo
+
+	EliminarEmpleadosLista(cargos->empleados); // Empiezo eliminando la lista de empleados
+	delete[] cargos->nombre; // Elimino la string
+	delete cargos; // Elimino el nodo 
+	return NULL; 
 }
 
 
@@ -323,13 +441,13 @@ bool ifCargoExiste(Cadena cargo, Cargo cargos_lista) {
 		return false;
 	} else if(strcmp(cargos_lista->nombre, cargo) == 0) {
 		return true;
-	} else if(cargos_lista->hijo != NULL && cargos_lista->hermano != NULL) {
-		return (ifCargoExiste(cargo, cargos_lista->hijo) || ifCargoExiste(cargo, cargos_lista->hermano));
-	} else if(cargos_lista->hijo != NULL && cargos_lista->hermano == NULL) {
+	} else if(cargos_lista->hijo != NULL && cargos_lista->hermano_sig != NULL) {
+		return (ifCargoExiste(cargo, cargos_lista->hijo) || ifCargoExiste(cargo, cargos_lista->hermano_sig));
+	} else if(cargos_lista->hijo != NULL && cargos_lista->hermano_sig == NULL) {
 		return ifCargoExiste(cargo, cargos_lista->hijo);
-	} else if(cargos_lista->hijo == NULL && cargos_lista->hermano != NULL) {
-		return ifCargoExiste(cargo, cargos_lista->hermano);
-	} else if(cargos_lista->hijo == NULL && cargos_lista->hermano == NULL) {
+	} else if(cargos_lista->hijo == NULL && cargos_lista->hermano_sig != NULL) {
+		return ifCargoExiste(cargo, cargos_lista->hermano_sig);
+	} else if(cargos_lista->hijo == NULL && cargos_lista->hermano_sig == NULL) {
 		return false;
 	}
 }
@@ -344,15 +462,15 @@ bool existePersonaEmpresa(Empresa e, Cadena ci){
 		if (cargo_iter->hijo != NULL) { //Si tengo hijo avanzo a ese hijo
 			cargo_iter = cargo_iter->hijo;
 		}
-		else if (cargo_iter->hermano != NULL){//No tiene hijo pero tiene hermano, voy a ese hermano
-			cargo_iter = cargo_iter->hermano;
+		else if (cargo_iter->hermano_sig != NULL){//No tiene hijo pero tiene hermano_sig, voy a ese hermano_sig
+			cargo_iter = cargo_iter->hermano_sig;
 		}
-		else {//Si estoy en una hoja sin hijo/hermano, retrocedo a padre  			
-			while (cargo_iter != NULL && cargo_iter ->hermano == NULL){
+		else {//Si estoy en una hoja sin hijo/hermano_sig, retrocedo a padre  			
+			while (cargo_iter != NULL && cargo_iter ->hermano_sig == NULL){
 				cargo_iter = cargo_iter ->padre;
 			}
-			if (cargo_iter != NULL){//itero en siguiente hermano
-				cargo_iter = cargo_iter -> hermano;
+			if (cargo_iter != NULL){//itero en siguiente hermano_sig
+				cargo_iter = cargo_iter -> hermano_sig;
 			}
 		}
 	}
